--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/socket.io-client": "^1.4.36",
+    "axios": "^0.21.1",
+    "mobx": "5.15.6",
+    "mobx-react": "6.2.5",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
