--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/socket.io-client": "^1.4.36",
     "axios": "^0.21.1",
-    "mobx": "5.15.6",
-    "mobx-react": "6.2.5",
+    "core-decorators": "^0.20.0",
+    "mobx": "^5.15.6",
+    "mobx-react": "^6.2.5",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
