--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-toggle": "^4.0.2",
     "@types/socket.io-client": "^1.4.36",
     "axios": "^0.21.1",
     "core-decorators": "^0.20.0",
@@ -26,6 +27,7 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toggle": "^4.1.2",
     "sass-loader": "^11.0.1",
     "socket.io-client": "^2.3.1",
     "typescript": "^4.1.2",
