--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://choi-jinwoo.github.io/Ask_Web/#",
   "name": "ask-web",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +17,6 @@
     "axios": "^0.21.1",
     "core-decorators": "^0.20.0",
     "dtil": "^1.1.0",
-    "gh-pages": "^3.2.0",
     "js-sha512": "^0.8.0",
     "mobx": "^5.15.6",
     "mobx-react": "^6.2.5",
@@ -39,10 +37,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "copy": "cp ./CNAME ./build/CNAME",
-    "predeploy": "yarn build && yarn copy",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
